core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_raw__measurement_doesnt_exist-4.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT * FROM data_1\")"
snapshot_kind: text
---
EmptyRelation: rows=0 [iox::measurement:Dictionary(Int32, Utf8)]
